--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .calculator {
   background: white;
   width: 400px;
-  border-radius: 12px;
+  border-radius: 10px;
   box-shadow: 0 5px 30px -5px rgba(0, 0, 0, 0.6);
 }
 
@@ -25,8 +25,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .calculator-display h1 {
@@ -57,7 +57,7 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
-} 
+}
 
 /* Buttons */
 .calculator-buttons {
@@ -67,7 +67,33 @@ body {
   padding: 10px;
 }
 
+button {
+  min-height: 40px;
+  font-size: 20px;
+  font-weight: 100;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: rgb(209, 207, 209);
+}
+
+button:hover {
+  filter: brightness(90%);
+}
+
+.operator {
+  background: #f0b411bd;
+  color: white;
+  font-size: 30px;
+}
+
+.clear {
+  background: rgba(241, 19, 19, 0.753);
+  color: white;
+}
+
 .equal-sign {
   grid-column: -2;
   grid-row: 2 / span 4;
+  background: rgba(0, 128, 0, 0.74);
 }
