--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   background: white;
   width: 400px;
   border-radius: 10px;
-  box-shadow: 0 5px 30px -5px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 5px 30px -5px rgba(0, 0, 0, 0.8);
 }
 
 .calculator-display {
@@ -81,6 +81,14 @@ button:hover {
   filter: brightness(90%);
 }
 
+button:active {
+  transform: translateY(1px);
+}
+
+button:focus {
+  outline: none;
+}
+
 .operator {
   background: #f0b411bd;
   color: white;
@@ -96,4 +104,11 @@ button:hover {
   grid-column: -2;
   grid-row: 2 / span 4;
   background: rgba(0, 128, 0, 0.74);
+}
+
+/* Media Query: Large Smartphone (Vertical) */
+@media screen and (max-width: 600px) {
+  .calculator {
+    width: 95%;
+  }
 }
